--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 :root {
     --primary-color: #111827;
-    --white-color: #F9FAFB;
+    --red-color: red;
 }
 
 body {
+    background-color: black;
     font-family: "Cormorant Garamond, Light 300";
     margin: 0px;
     max-width: 700px;
@@ -12,11 +13,13 @@ body {
 }
 
 .txt-basic {
+    color: red;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
 .img-resize {
+    background-color: red;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -29,6 +32,8 @@ body {
 }
 
 textarea {
+    color: red;
+    background-color: black;
     width: 90%;
     display: block;
     border: 1px solid;
@@ -59,7 +64,7 @@ textarea {
     border: 1px transparent;
     border-radius: 0.7rem;
     cursor: pointer;
-    color: var(--white-color);
+    color: var(--red-color);
 }
 
 #output {
@@ -79,7 +84,7 @@ textarea {
 
 .navigation {
     background-color: var(--primary-color);
-    color: white;
+    color: red;
     padding: 1.5rem;
     text-align: center;
     border-bottom-left-radius: 1rem;
@@ -105,7 +110,7 @@ textarea {
 
 .footer {
     background-color: var(--primary-color);
-    color: var(--white-color);
+    color: var(--red-color);
     padding: 1rem 1rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
@@ -115,8 +120,9 @@ textarea {
 }
 
 .footer .link {
-    color: var(--white-color);
-    font-size: medium;
+    color: var(--red-color);
+    font-size: large;
+    font-weight: bold;
 }
 
 .footer .social-link {
@@ -129,8 +135,8 @@ textarea {
 
 .footer .footer-header {
     font-weight: bolder;
-    font-size: large;
-    color: var(--white-color);
+    font-size: x-large;
+    color: var(--red-color);
     padding-top: 1rem;
 }
 
