--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,12 @@ body {
 }
 
 .img-resize {
+    text-align: center;
     background-color: red;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 80vw;
+    max-width: 500px;
     margin-top: 1rem;
 }
 
